--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,31 @@
 apiVersion: v1
-kind: Service
+
+kind: Pod
+
 metadata:
-  name: myapp
+
+  name: rss-site
+
+  labels:
+
+    app: web
+
 spec:
-  selector:
-    app: myapp
-  ports:
-  - port: 80
-    targetPort: 80
-    
+
+  containers:
+
+    - name: front-end
+
+      image: nginx
+
+      ports:
+
+        - containerPort: 80
+
+    - name: rss-reader
+
+      image: nickchase/rss-php-nginx:v1
+
+      ports:
+
+        - containerPort: 88
